# todo-app-python-cli

./: .gitignore  README.md  cli.py  database.py  exceptions.py  main.py  models.py  pyproject.toml  schema.py  services.py  utils.py
todo_app_python_cli/: cli.py  database.py  exceptions.py  main.py  models.py  schema.py  services.py  utils.py  validation.py
