[project]
name = "todo-app-python-cli"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"


[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
sqlalchemy = ">=2.0.41,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
